--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="images/vegan-hero1.jpg" class="d-block w-100" alt="Fresh vegan dishes" />
+          <img src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd?auto=format&fit=crop&w=1600&q=80" class="d-block w-100" alt="Fresh vegan dishes" />
           <div class="carousel-caption d-flex align-items-center justify-content-center h-100 hero-overlay">
             <div>
               <h1 class="display-5 fw-bold">Vegan Recipes Made Easy</h1>
@@ -59,14 +59,14 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="images/vegan-hero2.jpg" class="d-block w-100" alt="Colorful vegan bowls" />
+          <img src="https://images.unsplash.com/photo-1543353071-087092ec3936?auto=format&fit=crop&w=1600&q=80" class="d-block w-100" alt="Colorful vegan bowls" />
           <div class="carousel-caption hero-overlay">
             <h2 class="fw-semibold">Colorful Bowls</h2>
             <p>Balanced bowls packed with protein and crunch.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="images/vegan-hero3.jpg" class="d-block w-100" alt="Healthy vegan breakfast" />
+          <img src="https://images.unsplash.com/photo-1506089676908-3592f7389d4d?auto=format&fit=crop&w=1600&q=80" class="d-block w-100" alt="Healthy vegan breakfast" />
           <div class="carousel-caption hero-overlay">
             <h2 class="fw-semibold">Rise & Shine</h2>
             <p>Smoothies, oats, and scrambles to start strong.</p>
@@ -87,7 +87,7 @@
     <div class="container">
       <div class="row align-items-center g-4">
         <div class="col-lg-6">
-          <img src="images/about-us.jpg" class="img-fluid rounded" alt="People cooking vegan food together" />
+          <img src="https://images.unsplash.com/photo-1526312426976-593c2b999ef1?auto=format&fit=crop&w=1200&q=80" class="img-fluid rounded" alt="People cooking vegan food together" />
         </div>
         <div class="col-lg-6">
           <h2 class="fw-bold mb-3">About Us</h2>
@@ -106,7 +106,7 @@
       <div class="row g-4">
         <div class="col-md-6 col-lg-4">
           <div class="card recipe-card h-100 shadow-sm">
-            <img src="images/overnight-oats.jpg" class="card-img-top" alt="Berry Overnight Oats" />
+            <img src="https://images.unsplash.com/photo-1506084868230-bb9d95c24759?auto=format&fit=crop&w=1200&q=80" class="card-img-top" alt="Berry Overnight Oats" />
             <div class="card-body">
               <h5 class="card-title">Berry Overnight Oats</h5>
               <p class="card-text">Creamy oats soaked in almond milk, chia seeds, and maple, topped with fresh berries.</p>
@@ -115,7 +115,7 @@
         </div>
         <div class="col-md-6 col-lg-4">
           <div class="card recipe-card h-100 shadow-sm">
-            <img src="images/tofu-scramble.jpg" class="card-img-top" alt="Tofu scramble with veggies" />
+            <img src="https://images.unsplash.com/photo-1597300496268-94e3faff42eb?auto=format&fit=crop&w=1200&q=80" class="card-img-top" alt="Tofu scramble with veggies" />
             <div class="card-body">
               <h5 class="card-title">Tofu Veggie Scramble</h5>
               <p class="card-text">High-protein tofu scramble with peppers, spinach, and a pinch of turmeric.</p>
@@ -124,7 +124,7 @@
         </div>
         <div class="col-md-6 col-lg-4">
           <div class="card recipe-card h-100 shadow-sm">
-            <img src="images/green-smoothie.jpg" class="card-img-top" alt="Green Smoothie" />
+            <img src="https://images.unsplash.com/photo-1590080876135-92df57c671d0?auto=format&fit=crop&w=1200&q=80" class="card-img-top" alt="Green Smoothie" />
             <div class="card-body">
               <h5 class="card-title">Green Power Smoothie</h5>
               <p class="card-text">Banana, spinach, peanut butter, and oat milk blended until silky.</p>
@@ -142,7 +142,7 @@
       <div class="row g-4">
         <div class="col-md-6 col-lg-4">
           <div class="card recipe-card h-100 shadow-sm">
-            <img src="images/quinoa-bowl.jpg" class="card-img-top" alt="Quinoa salad bowl" />
+            <img src="https://images.unsplash.com/photo-1551183053-bf91a1d81141?auto=format&fit=crop&w=1200&q=80" class="card-img-top" alt="Quinoa salad bowl" />
             <div class="card-body">
               <h5 class="card-title">Mediterranean Quinoa Bowl</h5>
               <p class="card-text">Quinoa, cucumbers, tomatoes, olives, and hummus with lemon-tahini dressing.</p>
@@ -151,7 +151,7 @@
         </div>
         <div class="col-md-6 col-lg-4">
           <div class="card recipe-card h-100 shadow-sm">
-            <img src="images/veggie-wrap.jpg" class="card-img-top" alt="Grilled veggie wrap" />
+            <img src="https://images.unsplash.com/photo-1617196039897-a9f97e68e9ab?auto=format&fit=crop&w=1200&q=80" class="card-img-top" alt="Grilled veggie wrap" />
             <div class="card-body">
               <h5 class="card-title">Grilled Veggie Wrap</h5>
               <p class="card-text">Marinated zucchini, peppers, and mushrooms rolled with spinach and pesto.</p>
@@ -160,7 +160,7 @@
         </div>
         <div class="col-md-6 col-lg-4">
           <div class="card recipe-card h-100 shadow-sm">
-            <img src="images/vegan-sushi.jpg" class="card-img-top" alt="Avocado Veggie Sushi" />
+            <img src="https://images.unsplash.com/photo-1568605114967-8130f3a36994?auto=format&fit=crop&w=1200&q=80" class="card-img-top" alt="Avocado Veggie Sushi" />
             <div class="card-body">
               <h5 class="card-title">Avocado Veggie Sushi</h5>
               <p class="card-text">Simple maki with avocado, cucumber, and carrots—perfect for meal prep.</p>
@@ -178,7 +178,7 @@
       <div class="row g-4">
         <div class="col-md-6 col-lg-4">
           <div class="card recipe-card h-100 shadow-sm">
-            <img src="images/chickpea-curry.jpg" class="card-img-top" alt="Chickpea Curry" />
+            <img src="https://images.unsplash.com/photo-1604908812449-2606d8ca5e7e?auto=format&fit=crop&w=1200&q=80" class="card-img-top" alt="Chickpea Curry" />
             <div class="card-body">
               <h5 class="card-title">Coconut Chickpea Curry</h5>
               <p class="card-text">Creamy, cozy curry with tomatoes, ginger, and lots of cilantro.</p>
@@ -187,7 +187,7 @@
         </div>
         <div class="col-md-6 col-lg-4">
           <div class="card recipe-card h-100 shadow-sm">
-            <img src="images/tomato-pasta.jpg" class="card-img-top" alt="Garlic Tomato Pasta" />
+            <img src="https://images.unsplash.com/photo-1521389508051-d7ffb5dc8b89?auto=format&fit=crop&w=1200&q=80" class="card-img-top" alt="Garlic Tomato Pasta" />
             <div class="card-body">
               <h5 class="card-title">Garlic Tomato Pasta</h5>
               <p class="card-text">Al dente spaghetti in a garlicky basil-tomato sauce. Weeknight hero!</p>
@@ -196,7 +196,7 @@
         </div>
         <div class="col-md-6 col-lg-4">
           <div class="card recipe-card h-100 shadow-sm">
-            <img src="images/stuffed-sweet-potatoes.jpg" class="card-img-top" alt="Stuffed Sweet Potatoes" />
+            <img src="https://images.unsplash.com/photo-1589301760014-d929f3979dbc?auto=format&fit=crop&w=1200&q=80" class="card-img-top" alt="Stuffed Sweet Potatoes" />
             <div class="card-body">
               <h5 class="card-title">Stuffed Sweet Potatoes</h5>
               <p class="card-text">Roasted sweets stuffed with black beans, corn, and avocado crema.</p>
