--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Plantiful Plates — Vegan Recipes</title>
+  <title>Veggie Diaries — Vegan Recipes</title>
   <!-- Bootstrap 5 -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-    crossorigin="anonymous"
   />
   <style>
     html { scroll-behavior: smooth; }
@@ -24,9 +22,8 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top border-bottom">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="#home">Plantiful<span>Plates</span></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav"
-        aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand fw-bold" href="#home">Veggie<span>Diaries</span></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div id="nav" class="collapse navbar-collapse">
@@ -34,7 +31,7 @@
           <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="mealsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Meals</a>
+            <a class="nav-link dropdown-toggle" href="#" id="mealsDropdown" role="button" data-bs-toggle="dropdown">Meals</a>
             <ul class="dropdown-menu" aria-labelledby="mealsDropdown">
               <li><a class="dropdown-item" href="#breakfast">Breakfast</a></li>
               <li><a class="dropdown-item" href="#lunch">Lunch</a></li>
@@ -50,14 +47,9 @@
   <!-- Home / Hero with Carousel -->
   <header id="home" class="position-relative">
     <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd?q=80&w=1600&auto=format&fit=crop" class="d-block w-100" alt="Fresh vegetables and grains on a table" />
+          <img src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd?auto=format&fit=crop&w=1600&q=80" class="d-block w-100" alt="Fresh vegan dishes" />
           <div class="carousel-caption d-flex align-items-center justify-content-center h-100 hero-overlay">
             <div>
               <h1 class="display-5 fw-bold">Vegan Recipes Made Easy</h1>
@@ -67,14 +59,14 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="https://images.unsplash.com/photo-1543352634-8730b6e79a70?q=80&w=1600&auto=format&fit=crop" class="d-block w-100" alt="Bowl of colorful salad" />
+          <img src="https://images.unsplash.com/photo-1543353071-087092ec3936?auto=format&fit=crop&w=1600&q=80" class="d-block w-100" alt="Colorful vegan bowls" />
           <div class="carousel-caption hero-overlay">
             <h2 class="fw-semibold">Colorful Bowls</h2>
             <p>Balanced bowls packed with protein and crunch.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="https://images.unsplash.com/photo-1466637574441-749b8f19452f?q=80&w=1600&auto=format&fit=crop" class="d-block w-100" alt="Assorted fruits and breakfast spreads" />
+          <img src="https://images.unsplash.com/photo-1506089676908-3592f7389d4d?auto=format&fit=crop&w=1600&q=80" class="d-block w-100" alt="Healthy vegan breakfast" />
           <div class="carousel-caption hero-overlay">
             <h2 class="fw-semibold">Rise & Shine</h2>
             <p>Smoothies, oats, and scrambles to start strong.</p>
@@ -82,12 +74,10 @@
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
+        <span class="carousel-control-prev-icon"></span>
       </button>
       <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
+        <span class="carousel-control-next-icon"></span>
       </button>
     </div>
   </header>
@@ -97,7 +87,7 @@
     <div class="container">
       <div class="row align-items-center g-4">
         <div class="col-lg-6">
-          <img src="https://images.unsplash.com/photo-1526312426976-593c2b999ef1?q=80&w=1200&auto=format&fit=crop" class="img-fluid rounded" alt="People cooking together in a kitchen" />
+          <img src="https://images.unsplash.com/photo-1526312426976-593c2b999ef1?auto=format&fit=crop&w=1200&q=80" class="img-fluid rounded" alt="People cooking vegan food together" />
         </div>
         <div class="col-lg-6">
           <h2 class="fw-bold mb-3">About Us</h2>
@@ -112,41 +102,32 @@
   <!-- Breakfast -->
   <section id="breakfast" class="section-pad">
     <div class="container">
-      <div class="d-flex align-items-center justify-content-between mb-4">
-        <h2 class="fw-bold m-0">Breakfast</h2>
-        <a href="#home" class="btn btn-sm btn-success">Back to top</a>
-      </div>
+      <h2 class="fw-bold mb-4">Breakfast</h2>
       <div class="row g-4">
-        <!-- Card 1 -->
         <div class="col-md-6 col-lg-4">
           <div class="card recipe-card h-100 shadow-sm">
-            <img src="https://images.unsplash.com/photo-1484980859177-5ac1249fda6f?q=80&w=1200&auto=format&fit=crop" class="card-img-top" alt="Overnight oats with berries" />
+            <img src="https://images.unsplash.com/photo-1506084868230-bb9d95c24759?auto=format&fit=crop&w=1200&q=80" class="card-img-top" alt="Berry Overnight Oats" />
             <div class="card-body">
               <h5 class="card-title">Berry Overnight Oats</h5>
               <p class="card-text">Creamy oats soaked in almond milk, chia seeds, and maple, topped with fresh berries.</p>
-              <a href="#" class="btn btn-outline-success btn-sm">View Recipe</a>
             </div>
           </div>
         </div>
-        <!-- Card 2 -->
         <div class="col-md-6 col-lg-4">
           <div class="card recipe-card h-100 shadow-sm">
-            <img src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd?q=80&w=1200&auto=format&fit=crop" class="card-img-top" alt="Tofu scramble with veggies" />
+            <img src="https://images.unsplash.com/photo-1597300496268-94e3faff42eb?auto=format&fit=crop&w=1200&q=80" class="card-img-top" alt="Tofu scramble with veggies" />
             <div class="card-body">
               <h5 class="card-title">Tofu Veggie Scramble</h5>
               <p class="card-text">High-protein tofu scramble with peppers, spinach, and a pinch of turmeric.</p>
-              <a href="#" class="btn btn-outline-success btn-sm">View Recipe</a>
             </div>
           </div>
         </div>
-        <!-- Card 3 -->
         <div class="col-md-6 col-lg-4">
           <div class="card recipe-card h-100 shadow-sm">
-            <img src="https://images.unsplash.com/photo-1542444459-db63c9f0ae30?q=80&w=1200&auto=format&fit=crop" class="card-img-top" alt="Green smoothie in a glass" />
+            <img src="https://images.unsplash.com/photo-1590080876135-92df57c671d0?auto=format&fit=crop&w=1200&q=80" class="card-img-top" alt="Green Smoothie" />
             <div class="card-body">
               <h5 class="card-title">Green Power Smoothie</h5>
               <p class="card-text">Banana, spinach, peanut butter, and oat milk blended until silky.</p>
-              <a href="#" class="btn btn-outline-success btn-sm">View Recipe</a>
             </div>
           </div>
         </div>
@@ -157,41 +138,32 @@
   <!-- Lunch -->
   <section id="lunch" class="section-pad bg-light">
     <div class="container">
-      <div class="d-flex align-items-center justify-content-between mb-4">
-        <h2 class="fw-bold m-0">Lunch</h2>
-        <a href="#home" class="btn btn-sm btn-success">Back to top</a>
-      </div>
+      <h2 class="fw-bold mb-4">Lunch</h2>
       <div class="row g-4">
-        <!-- Card 1 -->
         <div class="col-md-6 col-lg-4">
           <div class="card recipe-card h-100 shadow-sm">
-            <img src="https://images.unsplash.com/photo-1540420773420-3366772f4999?q=80&w=1200&auto=format&fit=crop" class="card-img-top" alt="Quinoa salad bowl" />
+            <img src="https://images.unsplash.com/photo-1551183053-bf91a1d81141?auto=format&fit=crop&w=1200&q=80" class="card-img-top" alt="Quinoa salad bowl" />
             <div class="card-body">
               <h5 class="card-title">Mediterranean Quinoa Bowl</h5>
               <p class="card-text">Quinoa, cucumbers, tomatoes, olives, and hummus with lemon-tahini dressing.</p>
-              <a href="#" class="btn btn-outline-success btn-sm">View Recipe</a>
             </div>
           </div>
         </div>
-        <!-- Card 2 -->
         <div class="col-md-6 col-lg-4">
           <div class="card recipe-card h-100 shadow-sm">
-            <img src="https://images.unsplash.com/photo-1604908176997-431621429ef5?q=80&w=1200&auto=format&fit=crop" class="card-img-top" alt="Grilled veggie wrap" />
+            <img src="https://images.unsplash.com/photo-1617196039897-a9f97e68e9ab?auto=format&fit=crop&w=1200&q=80" class="card-img-top" alt="Grilled veggie wrap" />
             <div class="card-body">
               <h5 class="card-title">Grilled Veggie Wrap</h5>
               <p class="card-text">Marinated zucchini, peppers, and mushrooms rolled with spinach and pesto.</p>
-              <a href="#" class="btn btn-outline-success btn-sm">View Recipe</a>
             </div>
           </div>
         </div>
-        <!-- Card 3 -->
         <div class="col-md-6 col-lg-4">
           <div class="card recipe-card h-100 shadow-sm">
-            <img src="https://images.unsplash.com/photo-1526318472351-c75fcf070305?q=80&w=1200&auto=format&fit=crop" class="card-img-top" alt="Sushi rolls with avocado" />
+            <img src="https://images.unsplash.com/photo-1568605114967-8130f3a36994?auto=format&fit=crop&w=1200&q=80" class="card-img-top" alt="Avocado Veggie Sushi" />
             <div class="card-body">
               <h5 class="card-title">Avocado Veggie Sushi</h5>
               <p class="card-text">Simple maki with avocado, cucumber, and carrots—perfect for meal prep.</p>
-              <a href="#" class="btn btn-outline-success btn-sm">View Recipe</a>
             </div>
           </div>
         </div>
@@ -202,41 +174,32 @@
   <!-- Dinner -->
   <section id="dinner" class="section-pad">
     <div class="container">
-      <div class="d-flex align-items-center justify-content-between mb-4">
-        <h2 class="fw-bold m-0">Dinner</h2>
-        <a href="#home" class="btn btn-sm btn-success">Back to top</a>
-      </div>
+      <h2 class="fw-bold mb-4">Dinner</h2>
       <div class="row g-4">
-        <!-- Card 1 -->
         <div class="col-md-6 col-lg-4">
           <div class="card recipe-card h-100 shadow-sm">
-            <img src="https://images.unsplash.com/photo-1505575972945-2810a83aba9e?q=80&w=1200&auto=format&fit=crop" class="card-img-top" alt="Chickpea curry in a bowl" />
+            <img src="https://images.unsplash.com/photo-1604908812449-2606d8ca5e7e?auto=format&fit=crop&w=1200&q=80" class="card-img-top" alt="Chickpea Curry" />
             <div class="card-body">
               <h5 class="card-title">Coconut Chickpea Curry</h5>
               <p class="card-text">Creamy, cozy curry with tomatoes, ginger, and lots of cilantro.</p>
-              <a href="#" class="btn btn-outline-success btn-sm">View Recipe</a>
             </div>
           </div>
         </div>
-        <!-- Card 2 -->
         <div class="col-md-6 col-lg-4">
           <div class="card recipe-card h-100 shadow-sm">
-            <img src="https://images.unsplash.com/photo-1506354666786-959d6d497f1a?q=80&w=1200&auto=format&fit=crop" class="card-img-top" alt="Pasta with tomato sauce" />
+            <img src="https://images.unsplash.com/photo-1521389508051-d7ffb5dc8b89?auto=format&fit=crop&w=1200&q=80" class="card-img-top" alt="Garlic Tomato Pasta" />
             <div class="card-body">
               <h5 class="card-title">Garlic Tomato Pasta</h5>
               <p class="card-text">Al dente spaghetti in a garlicky basil-tomato sauce. Weeknight hero!</p>
-              <a href="#" class="btn btn-outline-success btn-sm">View Recipe</a>
             </div>
           </div>
         </div>
-        <!-- Card 3 -->
         <div class="col-md-6 col-lg-4">
           <div class="card recipe-card h-100 shadow-sm">
-            <img src="https://images.unsplash.com/photo-1589301760014-d929f3979dbc?q=80&w=1200&auto=format&fit=crop" class="card-img-top" alt="Baked sweet potatoes" />
+            <img src="https://images.unsplash.com/photo-1589301760014-d929f3979dbc?auto=format&fit=crop&w=1200&q=80" class="card-img-top" alt="Stuffed Sweet Potatoes" />
             <div class="card-body">
               <h5 class="card-title">Stuffed Sweet Potatoes</h5>
               <p class="card-text">Roasted sweets stuffed with black beans, corn, and avocado crema.</p>
-              <a href="#" class="btn btn-outline-success btn-sm">View Recipe</a>
             </div>
           </div>
         </div>
@@ -248,7 +211,7 @@
   <section id="contact" class="section-pad bg-light">
     <div class="container">
       <div class="row g-4">
-        <div class="col-lg-6">
+        <div class="col-lg-8">
           <h2 class="fw-bold mb-3">Contact Us</h2>
           <p class="mb-4">Have a recipe request, feedback, or partnership idea? We'd love to hear from you.</p>
           <form class="row g-3">
@@ -273,16 +236,6 @@
             </div>
           </form>
         </div>
-        <div class="col-lg-6">
-          <div class="ratio ratio-16x9 rounded overflow-hidden shadow-sm">
-            <iframe title="Google Map" src="https://maps.google.com/maps?q=New%20York&t=&z=11&ie=UTF8&iwloc=&output=embed" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </div>
-          <div class="mt-3">
-            <h5 class="fw-semibold">Find us</h5>
-            <p class="mb-1">123 Green Street, Brooklyn, NY</p>
-            <p class="mb-1">Email: hello@plantifulplates.example</p>
-          </div>
-        </div>
       </div>
     </div>
   </section>
@@ -290,7 +243,7 @@
   <!-- Footer -->
   <footer class="py-4 border-top bg-white">
     <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2">
-      <p class="m-0">&copy; <span id="year"></span> Plantiful Plates. All rights reserved.</p>
+      <p class="m-0">&copy; <span id="year"></span> Veggie Diaries. All rights reserved.</p>
       <ul class="nav">
         <li class="nav-item"><a class="nav-link text-muted footer-link" href="#about">About</a></li>
         <li class="nav-item"><a class="nav-link text-muted footer-link" href="#breakfast">Breakfast</a></li>
@@ -302,14 +255,9 @@
   </footer>
 
   <!-- JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    // Dynamic year
     document.getElementById('year').textContent = new Date().getFullYear();
-
-    // Close navbar after clicking a link on mobile
     const navLinks = document.querySelectorAll('.navbar .nav-link, .dropdown-item');
     const navbarCollapse = document.getElementById('nav');
     navLinks.forEach(link => link.addEventListener('click', () => {
@@ -320,3 +268,4 @@
   </script>
 </body>
 </html>
+
